# dlstreamer-prv

./: CMakeLists.txt  Makefile
.github/workflows/: dls-build-and-test-deb_pkgs-and-deb_imgs.yaml  dls-build-and-test-windows.yaml  dls-build-dev-docker-images-and-run-unit.yaml  dls-build-fedora41-images.yaml  dls-build-sources-make-build.yaml  dls-download-models-test.yaml  dls-download-models.yaml  dls-pr-workflow.yaml  dls-test-optimizer.yaml  documentation-check.yaml
dependencies/patches/: 0001-bk_0001-vaav1enc-Enable-intrablock-copy-and-palette-mode.patch  0001-va-encoder-disable-usage-hint-because-of-iHD-bug.patch  0002-bk_0002-vaav1enc-add-upscaledwidth-value-for-SCC-encoding.patch  0002-msdkdec-Apply-dynamic-allocation-for-VPL-2.9.patch  0003-bk_0003-vabasetransform-copy-buffer-s-metadata-at-copy-when-.patch  0003-msdkenc-Add-VPL-string-API-option.patch  0004-msdkdec-Do-not-use-aligned-value-to-set-allocation-c.patch  0005-va-compositor-Update-to-multiple-input-direct-write-.patch  0006-va-Add-scaling-and-composition-pipeline-flags.patch  0009-Optimize-VP9-preferred_output_delay-value.patch  0010-msdkav1enc-Add-intrabc-and-palette-for-scc-encode.patch  0012-va-Do-not-reuse-vadisplay-if-it-is-used-too-many-tim.patch  0013-h266parse-Only-support-byte-stream.patch  0014-va-Add-configurable-threshold-level-for-vadisplay.patch  0016-vabaseenc-use-gst_va_buffer_prepare_for_import.patch  (+4 more)
samples/: download_public_models.sh  model_index_schema.json
src/: CMakeLists.txt
src/monolithic/gst/3d_elements/g3dinference/: CMakeLists.txt  g3dinference.cpp  g3dinference.h
(+69 files in other folders)
